# claim-169

./: .codespellrc  .gitignore  .htmltest.yml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  SECURITY.md  claim_169.md  cliff.toml  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: build-python-wheels.yml  ci.yml  codeql.yml  coverage.yml  deploy-playground.yml  docs.yml  publish-release.yml  release.yml
core/claim169-core/: Cargo.toml  README.md
core/claim169-core/src/: decode.rs  encode.rs  error.rs  lib.rs  options.rs  serde_utils.rs
core/claim169-core/tests/: doc_examples.rs  integration_tests.rs  redteam_tests.rs  security_regressions.rs  security_tests.rs
core/claim169-jni/: Cargo.toml
core/claim169-jni/src/: lib.rs
core/claim169-python/: Cargo.toml  README.md  pyproject.toml
core/claim169-python/src/: lib.rs
core/claim169-python/tests/: test_custom_crypto.py  test_decode.py  test_doc_examples.py  test_encode.py  test_inspect.py
core/claim169-wasm/: Cargo.toml  README.md
core/claim169-wasm/src/: lib.rs
docs/: hooks.py  index.md  playground.md  qr-size-optimization-report.md
docs/assets/css/: extra.css
docs/assets/img/: encapsulation-en.drawio  encapsulation-fr.drawio
docs/assets/js/: mermaid-init.js
docs/core/: security.md
docs/core/concepts/: keys.md
docs/en/: 404.md  contributing.md  getting-started.md  index.md  photo-compression-guide.md  playground.md  specification.md
docs/en/api/: python.md  rust.md  typescript.md
docs/en/core/: glossary.md  security.md  specification.md  test-vectors.md
docs/en/getting-started/: installation.md  quick-start.md
docs/en/guides/: contributing.md  decoding.md  encoding.md  encryption.md  glossary.md  keys.md  security.md  test-vectors.md  troubleshooting.md  versioning.md
docs/es/: index.md  playground.md  specification.md
docs/es/api/: python.md  rust.md  typescript.md
docs/es/getting-started/: installation.md  quick-start.md
docs/es/guides/: contributing.md  decoding.md  encoding.md  encryption.md  glossary.md  keys.md  security.md  test-vectors.md  troubleshooting.md  versioning.md
docs/fr/: 404.md  contributing.md  getting-started.md  index.md  photo-compression-guide.md  playground.md  specification.md
docs/fr/api/: python.md  rust.md  typescript.md
docs/fr/core/: glossary.md  security.md  specification.md  test-vectors.md
docs/fr/getting-started/: installation.md  quick-start.md
docs/fr/guides/: contributing.md  decoding.md  encoding.md  encryption.md  glossary.md  keys.md  security.md  test-vectors.md  troubleshooting.md  versioning.md
docs/sdk/python/: encryption.md  index.md
docs/sdk/rust/: api.md  decoding.md  encoding.md  index.md
docs/sdk/typescript/: api.md  custom-crypto.md  decoding.md
examples/: README.md
examples/python/: basic_decode.py  custom_crypto_provider.py  encode_credential.py  encrypted_credential.py  requirements.txt  verified_decode.py
examples/typescript/: basic-decode.test.ts  custom-crypto-provider.test.ts  encode-credential.test.ts  encrypted-credential.test.ts  package-lock.json  package.json  tsconfig.json  verified-decode.test.ts
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_base45.rs  fuzz_decode.rs  fuzz_decompress.rs
overrides/: main.html
playground/: README.md  index.html  package-lock.json  package.json  vite.config.ts
playground/public/sample_id_pictures/: README.md
playground/src/: App.tsx  index.css
playground/src/components/: DecodePanel.tsx  EncodePanel.tsx  ErrorDisplay.tsx  Header.tsx  IdentityPanel.tsx  LanguageSelector.tsx  PhotoUpload.tsx  PipelineDetails.tsx  PipelineView.tsx  QrScanner.tsx  ResultPanel.tsx  ResultViewer.tsx  UnifiedPlayground.tsx  VerificationBadge.tsx
playground/src/i18n/: index.ts
playground/src/lib/: errors.ts  image.ts  utils.ts
public/: index.html
schema/: claim169.schema.json  mapping.yaml
scripts/: bump-version.sh  check-docs-i18n.py  conformance-test.sh  generate-java-api-docs.py  generate-ts-api-docs.sh  merge-dokka-output.py  mkdocs_hooks.py
sdks/kotlin/: build.gradle.kts  settings.gradle.kts
sdks/python/: pyproject.toml
sdks/typescript/: .npmignore  README.md  package-lock.json  package.json  tsconfig.json  typedoc.json  vitest.config.ts
test-vectors/edge/: expired.json  not-yet-valid.json  unknown-fields.json
test-vectors/invalid/: bad-base45.json  bad-zlib.json  missing-169.json  not-cose.json
test-vectors/valid/: claim169-example.json  demographics-full.json  ecdsa-p256-signed.json  ed25519-signed.json  encrypted-aes256.json  encrypted-signed.json  minimal.json  refugee-identity.json  with-all-biometrics.json  with-face.json  with-fingerprints.json
tools/: base45_to_hex.py  inspect_qr.py
tools/compression-analysis/: Cargo.toml
tools/compression-analysis/src/: main.rs
tools/generate-vectors/: Cargo.toml
tools/generate-vectors/src/: main.rs
(+202 files in other folders)
