[project]
name = "claim-169"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocs-static-i18n>=1.3.0",
    "mkdocstrings[python]>=0.27.0",
    "pre-commit>=4.0.0",
]
