[package]
name = "claim169-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
claim169-core = { path = "../core/claim169-core" }
arbitrary = { version = "1", features = ["derive"] }

[[bin]]
name = "fuzz_decode"
path = "fuzz_targets/fuzz_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_base45"
path = "fuzz_targets/fuzz_base45.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_decompress"
path = "fuzz_targets/fuzz_decompress.rs"
test = false
doc = false
bench = false
