[package]
name = "claim169-wasm"
description = "WASM/TypeScript bindings for MOSIP Claim 169 QR decoder"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
claim169-core = { path = "../claim169-core" }
wasm-bindgen.workspace = true
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen.workspace = true
js-sys.workspace = true
serde.workspace = true
coset = "0.4"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }

[features]
compression-brotli = ["claim169-core/compression-brotli"]
